# rubin_scheduler

./: .gitignore  README.md  pyproject.toml  requirements.txt  test-requirements.txt
.github/workflows/: build_docs.yaml  build_pypi.yaml  cache.yaml  ruff.yaml  run_all_tests.yaml  run_tests_docs.yaml  test_and_build.yaml
batch/: compile_prenight_metadata_cache.sh  run_prenight_sims.sh
ci/: Jenkinsfile_rubin_scheduler.conda
docs/: api.rst  archive.rst  conf.py  data-api.rst  data-download.rst  documenteer.toml  fbs-api-basis-functions.rst  fbs-api-detailers.rst  fbs-api-example-scheduler.rst  fbs-api-features.rst  fbs-api-model-observatory.rst  fbs-api-schedulers.rst  fbs-api-sim-runner.rst  fbs-api-surveys.rst  fbs-api-utils.rst  fbs-api.rst  fbs-arch.rst  fbs-output-schema.rst  fbs-running.rst  fbs.rst  index.rst  installation.rst  introduction.rst  output-schema.rst  sim-archive-api.rst  site-models-api.rst  site_models.rst  skybrightness-pre-api.rst  skybrightness-pre.rst  skybrightness_pre.rst  user-guide.rst  utils-api.rst  utils.rst
rubin_scheduler/: __init__.py
rubin_scheduler/data/: __init__.py  data_sets.py  scheduler_download_data.py
rubin_scheduler/scheduler/: make_sh.py  sim_runner.py
rubin_scheduler/scheduler/basis_functions/: basis_functions.py  feasibility_funcs.py  mask_basis_funcs.py  rolling_funcs.py
rubin_scheduler/scheduler/detailers/: __init__.py  detailer.py  dither_detailer.py  event_detailers.py  short_survey.py  vary_exptime.py
rubin_scheduler/scheduler/example/: __init__.py  comcam_sv_scheduler_example.py  ddf_df_gen.py  ddf_presched.py  example_scheduler.py  gen_too_surveys.py  generate_surveys.py  lsst_ddf_gen.py  lsst_ddf_presched.py  lsst_surveys.py  roman_surveys.py  simple_examples.py  too_surveys.py
rubin_scheduler/scheduler/features/: conditions.py  features.py
rubin_scheduler/scheduler/model_observatory/: __init__.py  generate_almanac.py  generate_altitudes.py  jerk.py  kinem_model.py  model_observatory.py
rubin_scheduler/scheduler/schedulers/: __init__.py  core_scheduler.py  filter_scheduler.py  queue_manager.py  summit_wrapper.py
rubin_scheduler/scheduler/surveys/: __init__.py  base_survey.py  dd_surveys.py  ddf_presched.py  ddf_presched_desc.py  desc_ddf.py  field_survey.py  generate_ddf_grid.py  long_gap_survey.py  no_bf_pointings_survey.py  plan_night_survey.py  pointings_survey.py  roman_surveys.py  scripted_surveys.py  surveys.py  too_scripted_surveys.py  too_surveys.py
rubin_scheduler/scheduler/targetofo/: __init__.py  gen_events.py
rubin_scheduler/scheduler/thomson/: thomson.py  thomson_jit.py
rubin_scheduler/scheduler/training/: training.py
rubin_scheduler/scheduler/utils/: __init__.py  comcam_tessellate.py  dithering.py  footprints.py  observation_array.py  sky_area.py  too_objects.py  tsp.py  utils.py
rubin_scheduler/sim_archive/: __init__.py  make_snapshot.py  prenight.py  sim_archive.py
rubin_scheduler/site_models/: __init__.py  almanac.py  cloud_data.py  cloud_maps.py  cloud_model.py  downtime_model.py  generate_planets.py  generate_sun_moon_pos.py  generate_sunsets.py  read_fields.py  scheduled_downtime_data.py  seeing_data.py  seeing_model.py  unscheduled_downtime_data.py
rubin_scheduler/skybrightness_pre/: dark_sky.py  sky_model_pre.py
rubin_scheduler/skybrightness_pre/data/: generate_dark_sky.py
rubin_scheduler/utils/: __init__.py  approx_coord_transforms.py  camera_footprint.py  code_utilities.py  consdb.py  constants.py  coordinate_transformations.py  dayobs.py  ddf_locations.py  file_maps.py  generate_example_db.py  healpy_utils.py  htm_module.py  m5_flat_sed.py  parallel_utils.py  projections.py  riseset.py  rotskypos.py  sampling_functions.py  season_utils.py  site.py  sys_eng_vals.py  tree_utils.py  zernike_module.py
tests/data/: test_data.py
tests/scheduler/: test_baseline.py  test_basisfuncs.py  test_comcam.py  test_comcam_surveys.py  test_conditions.py  test_constant_weather.py  test_coresched.py  test_detailers.py  test_example.py  test_features.py  test_filterschedulers.py  test_modelobs.py  test_nside.py  test_queue_manager.py  test_rotator.py  test_scalarbf.py  test_sim_runner.py  test_simple_examples.py  test_skyarea.py  test_snapshots.py  test_sumit_wrapper.py  test_surveys.py  test_targetoo.py  test_too_scripted.py  test_utils.py  test_wind.py
tests/sim_archive/: test_make_snapshot.py  test_prenight.py  test_sim_archive.py
tests/site_models/: test_almanac.py  test_clouddata.py  test_cloudmaps.py  test_cloudmodel.py  test_downtimemodel.py  test_scheduleddowntimedata.py  test_seeingdata.py  test_seeingmodel.py  test_unscheduleddowntimedata.py
tests/skybrightness_pre/: test_dark_sky.py  test_skypre.py  test_skypre_oor.py
tests/utils/: test_approx.py  test_camerafootprint.py  test_cleanup.py  test_codeutilities.py  test_consdb.py  test_constants.py  test_coordinatetransformations.py  test_dayobs.py  test_filemaps.py  test_healutils.py  test_kdtree.py  test_locations.py  test_m5flatsed.py  test_para_utils.py  test_plot_utils.py  test_riseset.py  test_rotsky.py  test_season.py  test_site.py  test_spatialbounds.py  test_trixel.py  test_zernikemodule.py
(+2 files in other folders)
